# aegis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC_PROMPT.md  docker-compose.yml  pyproject.toml
analytics/: AGENTS.md  __init__.py  attribution.py  performance_metrics.py  pnl_calculator.py  report_generator.py
api/: AGENTS.md  main.py  websocket.py
api/routes/: AGENTS.md  analytics.py  backtests.py  control.py  decisions.py  funding.py  health.py  metrics.py  models.py  positions.py  risk.py  signals.py  system.py  trades.py
backoffice/: AGENTS.md  api_client.py  app.py
backoffice/components/: AGENTS.md  charts.py  filters.py
backoffice/pages/: 01_live_dashboard.py  02_decision_log.py  03_trade_journal.py  04_pnl_analytics.py  05_model_monitor.py  06_risk_dashboard.py  07_backtest_viewer.py  08_system_ops.py  AGENTS.md
config/: AGENTS.md  risk_params.py  settings.py  symbols.py
data/: AGENTS.md  binance_vision.py  collector.py  feature_engineer.py  realtime_feed.py  storage.py
docs/: api-reference.md  architecture.md  backoffice-guide.md  getting-started.md
execution/: AGENTS.md  base.py  binance_executor.py  order_manager.py  paper_trader.py
models/: AGENTS.md  __init__.py  adarnn_model.py  base.py  ensemble.py  lgbm_model.py  tra_model.py  trainer.py
monitor/: AGENTS.md  metrics.py  telegram_bot.py
results/: param_search.json
risk/: AGENTS.md  drawdown_monitor.py  position_limits.py  risk_engine.py
scheduler/: AGENTS.md  orchestrator.py
scripts/: AGENTS.md  backfill_data.py  download_binance_vision.py  fetch_ccxt_candles.py  paper_trade_sim.py  run_backtest.py  train_models.py
strategy/: AGENTS.md  decision_logger.py  position_manager.py  regime_detector.py  signal_converter.py
tests/: AGENTS.md  test_analytics.py  test_api_endpoints.py  test_backoffice_e2e.py  test_binance_executor.py  test_data_collector.py  test_decision_logger.py  test_e2e_pipeline.py  test_feature_engineer.py  test_mainnet_readiness.py  test_models.py  test_paper_trader.py  test_risk_engine.py  test_signal_converter.py
